# tell-your-story

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 220cd69694ba_init.py  3a26c4f6833c_add_category_to_questions.py  419bf11b851f_add_transcript_and_transcription_status_.py  5f7b5523f586_add_accounts_and_users_tables.py  76ecf28dae30_add_questions_table.py  829b894c4318_add_memoir_draft_status_and_cover_photo_.py  8660f57cbe43_add_user_type_to_users_and_add_invites_.py  8e73b217cdea_add_answer_type_and_media_fields_to_.py  a6976e0eab8a_add_memoirs_table.py  ea1160dba301_add_answers_table.py  fd030632f803_add_password_reset_tokens.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  invites.py  memoir.py  questions.py  users.py
backend/app/core/: config.py  default_questions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  account.py  answer.py  invite.py  memoir.py  password_reset_token.py  question.py  user.py
backend/app/schemas/: account.py  answer.py  auth.py  invite.py  memoir.py  password_reset.py  question.py  user.py
backend/app/services/: account_service.py  (+15 more)
backend/scripts/: send_test_email.py
backend/tests/: conftest.py  test_account_switching.py  test_answers.py  test_auth.py  test_email_templates.py  test_invites.py  test_memoir.py  test_password_reset.py  test_questions.py  test_storage_service.py  test_users.py
(+33 files in other folders)
